--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -3,7 +3,7 @@
     background-image: url(../images/bg-main.png);
     background-repeat: no-repeat;
     background-position: fixed;
-    background-size: 100%;
+    background-size: cover;
     background-attachment: fixed;
 }
 
