--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -14,7 +14,7 @@ a {
     background-image: url(../images/bg-main.png);
     background-repeat: no-repeat;
     background-position: fixed;
-    background-size: 100%;
+    background-size: cover;
     background-attachment: fixed;
 }
 
