--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -6,14 +6,19 @@
 #intro_section {
     position: relative;
     min-height: 675px;
-    width: 1519px;
+    width: 100%;
 }
 
 .intro_img {
     position: relative;
-    left: 200px;
+    left: 230px;
     top: 30px;
-    width: 450px;
+    max-width: 30%;
+    /* width: 450px; */
+}
+
+.intro_img img {
+    width: 100%;
 }
 
 .intro_info {
@@ -21,7 +26,7 @@
     left: 800px;
     top: 340px;
     text-align: center;
-    max-width: 500px;
+    max-width: 70%;
 }
 
 /*resume section*/
@@ -29,12 +34,12 @@
 #resume_section {
     position: relative;
     min-height: 590px;
-    width: 1519px;
+    width: 100%;
 }
 
 .resume_intro {
     position: relative;
-    width: 600px;
+    width: 40%;
     text-align: justify;
     left: 160px;
     top: 50px;
@@ -44,12 +49,83 @@
     position: absolute;
     top: 10px;
     left: 870px;
+    width: 40%;
 }
 
 .resume_info {
-    position: relative;
-    width: 500px;
     text-align: justify;
-    left: 160px;
-    top: 70px;
+    left: 0;
+    top: 40px;
+}
+
+/* project preview section */
+#project_preview {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+#project_preview h1 {
+    margin: 0;
+    padding: 0;
+    padding-left: 160px;
+}
+
+#homepage_card_container {
+    display: flex;
+    gap: 10px;
+    /* justify-content: space-evenly; */
+    padding: 0;
+    padding-left: 100px;
+    margin: 0;
+}
+
+/* reviews section */
+#homepage_reviews {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+#homepage_reviews h1 {
+    padding-left: 160px;
+}
+
+#homepage_reviews .review_cards_container {
+    /* padding-left: 135px; */
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.review_cards {
+    width: 290px;
+    text-align: center;
+    background-color: black;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.review_cards p {
+    font-size: 10px;
+    text-align: justify;
+}
+
+/* faq section */
+#faq {
+    width: 100%;
+    margin-top: 50px;
+}
+
+#faq fieldset {
+    padding: 0;
+    margin: 0px 160px;
+}
+
+#faq table {
+    margin: 50px;
+}
+
+#faq table td {
+    padding: 10px;
+    border: 1px solid white;
 }
