--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,10 +1,10 @@
 .intro_section {
-  padding: 7%;
-  width: 100%;
-  height: auto;
-  align-items: center;
-  justify-content: center;
+  padding: 2% !important;
+  height: auto !important;
+  align-items: center !important;
+  justify-content: center !important;
   text-align: center;
+  padding-top: 8% !important;
 }
 .intro_section .img_section img {
   width: 70%;
@@ -19,6 +19,40 @@
   text-decoration: none;
   color: rgba(255, 255, 255, 0.5);
   font-size: 1.5rem;
+}
+
+.resume_section {
+  padding: 2% !important;
+  height: auto !important;
+  align-items: center !important;
+  justify-content: center !important;
+  text-align: justify;
+  color: white;
+}
+.resume_section .resume_intro .resume_info table tr {
+  text-align: left;
+}
+.resume_section .resume_intro .resume_info table tr td {
+  padding-right: 20px;
+}
+.resume_section .resume_img {
+  text-align: center;
+}
+
+.project_preview {
+  padding: 2% !important;
+  height: auto !important;
+  align-items: center !important;
+  justify-content: center !important;
+  color: white !important;
+}
+
+.bg_black {
+  background-color: black;
+}
+
+.border_black {
+  border-color: black;
 }
 
 /*# sourceMappingURL=index.css.map */
